test_suite/tests/ui/borrow/no_lifetimes.stderr
error: field `s` has no lifetimes to borrow
 --> $DIR/no_lifetimes.rs:6:5
  |
6 | /     #[serde(borrow)]
7 | |     s: String,
  | |_____________^

error: aborting due to previous error

